# cv_gladglfw

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
glfwTest/: glfwTest.sln
glfwTest/glfwTest/: glfwTest.vcxproj  glfwTest.vcxproj.filters
glfwTest/glfwTest/src/: main.cpp
glfwTest/glfwTest/src/API/: Gl_renderer.cpp  Gl_renderer.h
glfwTest/glfwTest/src/API/Types/: Gl_shader.h
glfwTest/glfwTest/src/Back/: Back.h
glfwTest/glfwTest/src/Enviroment/: Defines.h  Enums.h  RendererEnviroment.h
src/: Util.hpp  main.cpp
src/API/: GL_BackVertex.h  Gl_BackVertex.cpp  Gl_renderer.cpp  Gl_renderer.h
src/API/Types/: GL_TextureCubeMap.cpp  GL_TextureCubeMap.h  GL_TextureObject.cpp  GL_TextureObject.h  Gl_shader.cpp  Gl_shader.h
src/Back/: Back.cpp  Back.h
src/Core/: AssetManager.cpp  AssetManager.h
src/Enviroment/: CV_Enviroment.h  Defines.h  Enums.h  RendererEnviroment.h  Types.h
src/Input/: Input.cpp  Input.h  Keycodes.h
src/Math/: Frustum.cpp  Frustum.h  Types.h
src/Renderer/Types/: Lighting.cpp  Lighting.h  TextureCubeMap.cpp  TextureCubeMap.h  TextureObject.cpp  TextureObject.h
src/Scene/: Camera.cpp  Camera.h
src/resources/shaders/: GL_Cube.frag  GL_Cube.vert  GL_CubeDefect.frag  GL_CubeDefect.vert  GL_CubeMap.vert  GL_CubeMirror.frag  GL_CubeMirror.vert
